// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterManager renders correctly 1`] = `
<div class="v-menu v-menu--attached"><button type="button" class="v-btn v-btn--is-elevated v-btn--has-bg v-btn--rounded theme--light v-size--default secondary text-lowercase mr-2" role="button" aria-haspopup="true" aria-expanded="false"><span class="v-btn__content">
			2 filtres

			<button type="button" class="v-icon notranslate v-icon--link theme--light white--text ml-2"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"></path></svg></button></span></button>
  <!---->
</div>
`;

exports[`FilterManager renders correctly with a single filter 1`] = `
<div class="v-menu v-menu--attached"><button type="button" class="v-btn v-btn--is-elevated v-btn--has-bg v-btn--rounded theme--light v-size--default secondary text-lowercase mr-2" role="button" aria-haspopup="true" aria-expanded="false"><span class="v-btn__content">
			1 filtre

			<button type="button" class="v-icon notranslate v-icon--link theme--light white--text ml-2"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"></path></svg></button></span></button>
  <!---->
</div>
`;
